# BKW-Design-Agent

./: Beam_Design_Concrete_Solver_neutral.json  Beam_Design_Steel_Solver_neutral.json  Beam_Design_Wood_Solver_neutral.json  README.md  ai_agent_flow_explanation.md  app.py  beam_visualizer.py  main.py  pyproject.toml  requirements.txt  run.bat  setup.bat  test_dependencies.py  test_error_handling_scenarios.md  test_langgraph.py  test_mcp_connection.py  test_opt_status_fix.py  test_vacation_scenarios.md
AI-Agent-Flask/: flask_app.py  mcp_tools.py  pyproject.toml  requirements_flask.txt  run_flask.py  start_mcp_servers.py
AI-Agent-Flask/chroma_openai/: chroma.sqlite3
AI-Agent-Flask/data/: Task.csv
AI-Agent-Flask/src/langgraphagenticai/: orchestrator.py
AI-Agent-Flask/src/langgraphagenticai/graph/: graph_builder.py
AI-Agent-Flask/static/css/: style.css
AI-Agent-Flask/static/js/: app.js
AI-Agent-Flask/templates/: index.html
ML_model_Training/: Beams_Historical_data_generation_00.ipynb  IPE_Steel_Beam_Dimensions.xlsx  design_ml_regressor.ipynb
ML_model_Training/data/: beam_data_filtered.csv
ML_model_Training/models/: label_encoder.joblib  scaler.joblib
ai_agent/: __init__.py  beam_processor.py  conversation_state.py  enums.py  historical_analyzer.py  intent_detector.py  llm_orchestrator.py  phase_handlers.py  visualization_handler.py
ai_agent/model_status_predict/: ipe_beams_dims.csv  script.py
ai_agent/model_status_predict/models/: label_encoder.joblib  model_info.txt
static/: style.css
templates/: index.html
(+13 files in other folders)
